portfolio: added footer section

--- a/app/style/style.css
+++ b/app/style/style.css
@@ -445,3 +445,15 @@ a:hover {
         text-align: center;
     }
 }
+
+.footer {
+    height: 150px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
